Broadcast Receiver ADD

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
         <item>8h</item>
         <item>12h</item>
         <item>24h</item>
-    </string-array>>
+    </string-array>
+    >
 </resources>
